test/sematest/valid/shadowed_field.java
class Test {
  public int name;
  public int test() {
    int name;
  }
}
