test/sematest/invalid/undefined_variable.java
class Test {
  public int test() {
    return undefinedVar;
  }
}
